apply spring-boot-dependencies 2.1.2 #858

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
@@ -113,7 +113,7 @@
 
     <!-- == Begin BeanValidation == -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
     </dependency>
     <!-- == End BeanValidation == -->
