--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -183,124 +183,6 @@
   <dependencyManagement>
     <dependencies>
 
-      <!-- == Begin Spring IO Platform == -->
-      <dependency>
-        <groupId>io.spring.platform</groupId>
-        <artifactId>platform-bom</artifactId>
-        <version>${io.spring.platform.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <!-- == End Spring IO Platform == -->
-
-      <!-- == Begin Tomcat == -->
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jsp-api</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-annotations-api</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-catalina-jmx-remote</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-dbcp</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-jdbc</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-websocket</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-el</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-jasper</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-websocket</artifactId>
-        <version>${tomcat.version}</version>
-      </dependency>
-      <!-- == End Tomcat == -->
-
-      <!-- == Begin MyBatis == -->
-      <dependency>
-        <groupId>org.mybatis</groupId>
-        <artifactId>mybatis</artifactId>
-        <version>${org.mybatis.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mybatis</groupId>
-        <artifactId>mybatis-spring</artifactId>
-        <version>${org.mybatis.spring.version}</version>
-      </dependency>
-      <!-- == End MyBatis == -->
-
-      <!-- == Begin Dozer== -->
-      <dependency>
-        <groupId>com.github.dozermapper</groupId>
-        <artifactId>dozer-core</artifactId>
-        <version>${dozer.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.github.dozermapper</groupId>
-        <artifactId>dozer-spring4</artifactId>
-        <version>${dozer.version}</version>
-      </dependency>
-      <!-- == End Dozer== -->
-
-      <!-- == Begin Joda-Time == -->
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time-jsptags</artifactId>
-        <version>${joda-time.joda-time-jsptags.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jadira.usertype</groupId>
-        <artifactId>usertype.core</artifactId>
-        <version>${jadira-usertype-core.version}</version>
-      </dependency>
-      <!-- == End Joda-Time == -->
-
-      <!-- == Begin Logging == -->
-      <!-- Log4JDBC -->
-      <dependency>
-        <groupId>org.lazyluke</groupId>
-        <artifactId>log4jdbc-remix</artifactId>
-        <version>${org.lazyluke.version}</version>
-        <!-- this artifact depends on junit as compile scope -->
-        <exclusions>
-          <exclusion>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <!-- == End Logging == -->
-
       <!-- == Begin TERASOLUNA == -->
       <dependency>
         <groupId>org.terasoluna.gfw</groupId>
@@ -423,6 +305,264 @@
         <type>pom</type>
       </dependency>
       <!-- == End TERASOLUNA == -->
+
+      <!-- == Begin Spring Boot == -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${org.springframework.boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- == End Spring Boot == -->
+
+      <!-- == Begin Spring Security OAuth == -->
+      <dependency>
+        <groupId>org.springframework.security.oauth</groupId>
+        <artifactId>spring-security-oauth2</artifactId>
+        <version>${spring-security-oauth.version}</version>
+      </dependency>
+      <!-- == End Spring Security OAuth == -->
+
+      <!-- == Begin MyBatis == -->
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis</artifactId>
+        <version>${org.mybatis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis-spring</artifactId>
+        <version>${org.mybatis.spring.version}</version>
+      </dependency>
+      <!-- == End MyBatis == -->
+
+      <!-- == Begin Dozer== -->
+      <dependency>
+        <groupId>com.github.dozermapper</groupId>
+        <artifactId>dozer-core</artifactId>
+        <version>${dozer.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.dozermapper</groupId>
+        <artifactId>dozer-spring4</artifactId>
+        <version>${dozer.version}</version>
+      </dependency>
+      <!-- == End Dozer== -->
+
+      <!-- == Begin Joda-Time == -->
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time-jsptags</artifactId>
+        <version>${joda-time.joda-time-jsptags.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jadira.usertype</groupId>
+        <artifactId>usertype.core</artifactId>
+        <version>${jadira-usertype-core.version}</version>
+      </dependency>
+      <!-- == End Joda-Time == -->
+
+      <!-- == Begin Logging == -->
+      <!-- Log4JDBC -->
+      <dependency>
+        <groupId>org.lazyluke</groupId>
+        <artifactId>log4jdbc-remix</artifactId>
+        <version>${org.lazyluke.version}</version>
+        <!-- this artifact depends on junit as compile scope -->
+        <exclusions>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <!-- == End Logging == -->
+
+      <!-- == Begin Google == -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+      <!-- == End Google == -->
+
+      <!-- == Begin Apache Commons == -->
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>${commons-beanutils.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>${commons-collections.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>${commons-fileupload.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
+      </dependency>
+      <!-- == Begin Apache Commons == -->
+
+      <!-- == Begin OpenPDF == -->
+      <dependency>
+        <groupId>com.github.librepdf</groupId>
+        <artifactId>openpdf</artifactId>
+        <version>${openpdf.version}</version>
+      </dependency>
+      <!-- == End OpenPDF == -->
+
+      <!-- == Begin Apache POI == -->
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-scratchpad</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+      <!-- == End Apache POI == -->
+
+      <!-- == Begin Apache Tiles == -->
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-api</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-core</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-el</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-extras</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-jsp</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-servlet</artifactId>
+        <version>${tiles.version}</version>
+      </dependency>
+      <!-- == End Apache Tiles == -->
+
+      <!-- == Begin Other JavaEE/SE APIs == -->
+      <dependency>
+        <groupId>javax.el</groupId>
+        <artifactId>javax.el-api</artifactId>
+        <version>${javax-el.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>${javax-inject.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>javax.servlet.jsp-api</artifactId>
+        <version>${javax-jsp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.taglibs</groupId>
+        <artifactId>taglibs-standard-impl</artifactId>
+        <version>${taglibs-standard.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.taglibs</groupId>
+        <artifactId>taglibs-standard-jstlel</artifactId>
+        <version>${taglibs-standard.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.taglibs</groupId>
+        <artifactId>taglibs-standard-spec</artifactId>
+        <version>${taglibs-standard.version}</version>
+      </dependency>
+      <!-- == End Other JavaEE/SE APIs == -->
+
+      <!-- == Begin Tomcat == -->
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jsp-api</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-annotations-api</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-catalina-jmx-remote</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-dbcp</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jdbc</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-websocket</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-el</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-websocket</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <!-- == End Tomcat == -->
+
+      <!-- == Begin Unit Test == -->
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest.version}</version>
+      </dependency>
+      <!-- == Begin Unit Test == -->
+
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -444,10 +584,10 @@
     <!-- == Dependency Versions == -->
     <!-- == TERASOLUNA == -->
     <terasoluna.gfw.version>5.5.1-SNAPSHOT</terasoluna.gfw.version>
-    <!-- == Spring IO Platform == -->
-    <io.spring.platform.version>Cairo-SR3</io.spring.platform.version>
-    <!-- == Tomcat == -->
-    <tomcat.version>9.0.10</tomcat.version>
+    <!-- == Spring Boot == -->
+    <org.springframework.boot.version>2.1.2.RELEASE</org.springframework.boot.version>
+    <!-- == Spring Security OAuth == -->
+    <spring-security-oauth.version>2.2.3.RELEASE</spring-security-oauth.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.4.6</org.mybatis.version>
     <org.mybatis.spring.version>1.3.2</org.mybatis.spring.version>
@@ -458,6 +598,28 @@
     <jadira-usertype-core.version>6.0.1.GA</jadira-usertype-core.version>
     <!-- == Logging == -->
     <org.lazyluke.version>0.2.7</org.lazyluke.version>
+    <!-- == Google == -->
+    <guava.version>20.0</guava.version>
+    <!-- == Apache Commons == -->
+    <commons-beanutils.version>1.9.3</commons-beanutils.version>
+    <commons-collections.version>3.2.2</commons-collections.version>
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-io.version>2.6</commons-io.version>
+    <!-- == OpenPDF == -->
+    <openpdf.version>1.0.5</openpdf.version>
+    <!-- == Apache POI == -->
+    <poi.version>3.17</poi.version>
+    <!-- == Apache Tiles == -->
+    <tiles.version>3.0.8</tiles.version>
+    <!-- == Other JavaEE/SE APIs == -->
+    <javax-el.version>3.0.1-b06</javax-el.version>
+    <javax-inject.version>1</javax-inject.version>
+    <javax-jsp.version>2.3.3</javax-jsp.version>
+    <taglibs-standard.version>1.2.5</taglibs-standard.version>
+    <!-- == Tomcat == -->
+    <tomcat.version>9.0.10</tomcat.version>
+    <!-- == Unit Test == -->
+    <hamcrest.version>1.3</hamcrest.version>
     <!-- == Project Properties == -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <archetype.test.skip>true</archetype.test.skip>
@@ -468,7 +630,7 @@
     <cargo.daemon.url>http://localhost:18000</cargo.daemon.url>
     <cargo.container.id>tomcat9x</cargo.container.id>
     <cargo.container.url>http://archive.apache.org/dist/tomcat/tomcat-9/v${cargo.tomcat9.version}/bin/apache-tomcat-${cargo.tomcat9.version}.zip</cargo.container.url>
-    <cargo.tomcat9.version>9.0.10</cargo.tomcat9.version>
+    <cargo.tomcat9.version>${tomcat.version}</cargo.tomcat9.version>
   </properties>
   <profiles>
     <profile>
