--- a/terasoluna-gfw-common-libraries/pom.xml
+++ b/terasoluna-gfw-common-libraries/pom.xml
@@ -154,8 +154,8 @@
   </build>
   <properties>
     <!-- == Maven Plugin Versions == -->
-    <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
-    <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+    <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
     <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
     <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
     <formatter-maven-plugin.version>2.0.1</formatter-maven-plugin.version>
@@ -168,4 +168,16 @@
     <java-version>1.8</java-version>
     <project.root.basedir>${project.basedir}</project.root.basedir>
   </properties>
+  <profiles>
+    <profile>
+      <id>jdk11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <properties>
+        <!-- coverall 4.3.0 or previous version does not work on Java 11, see https://github.com/trautonen/coveralls-maven-plugin/issues/112 -->
+        <coveralls.skip>true</coveralls.skip>
+      </properties>
+    </profile>
+  </profiles>
 </project>
