--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install: true
 script:
   - mvn xml:check-format -P xml-check-format
   - mvn formatter:validate -P common-libs
-  - mvn -U clean install
-  - mvn -U -P common-libs jacoco:report coveralls:report
+  - mvn -U clean install -P default
+  - mvn -U jacoco:report coveralls:report -P common-libs
