--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -193,6 +193,15 @@
       </dependency>
       <!-- == End Spring IO Platform == -->
 
+      <!-- == Begin Spring Security OAuth == -->
+      <!-- == Upgrade Spring Security OAuth from the Spring IO Platform as a security vulnerability update.(CVE-2019-3778) == -->
+      <dependency>
+        <groupId>org.springframework.security.oauth</groupId>
+        <artifactId>spring-security-oauth2</artifactId>
+        <version>${spring-security-oauth.version}</version>
+      </dependency>
+      <!-- == End Spring Security OAuth == -->
+
       <!-- == Begin MyBatis == -->
       <dependency>
         <groupId>org.mybatis</groupId>
@@ -393,6 +402,9 @@
     <terasoluna.gfw.version>5.4.2-SNAPSHOT</terasoluna.gfw.version>
     <!-- == Spring IO Platform == -->
     <io.spring.platform.version>Brussels-SR16</io.spring.platform.version>
+    <!-- == Spring Security OAuth == -->
+    <!-- == Upgrade Spring Security OAuth from the Spring IO Platform as a security vulnerability update.(CVE-2019-3778) == -->
+    <spring-security-oauth.version>2.0.17.RELEASE</spring-security-oauth.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.4.5</org.mybatis.version>
     <org.mybatis.spring.version>1.3.1</org.mybatis.spring.version>
