--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-jodatime/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-jodatime/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!-- == End Unit Test == -->
 
     <!-- == Begin Database == -->
