create @ByteSize validator #761
(cherry picked from commit e3e85c040c72490e2600e032621c1f758e4ba58e)

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/src/test/resources/ValidationMessages.properties
@@ -2,4 +2,5 @@
 
 org.terasoluna.gfw.common.validator.constraints.ByteMin.message = must be greater than or equal to {value} bytes
 org.terasoluna.gfw.common.validator.constraints.ByteMax.message = must be less than or equal to {value} bytes
+org.terasoluna.gfw.common.validator.constraints.ByteSize.message = must be between {min} and {max} bytes
 org.terasoluna.gfw.common.validator.constraints.Compare.message = invalid combination of {left} and {right}
