--- a/terasoluna-gfw-dependencies/terasoluna-gfw-security-core-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-security-core-dependencies/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>terasoluna-gfw-dependencies</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.5.1-SNAPSHOT</version>
+    <version>5.5.1.RELEASE</version>
     <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-security-core-dependencies</artifactId>
