--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>terasoluna-gfw</artifactId>
   <groupId>org.terasoluna.gfw</groupId>
-  <version>5.6.0-SNAPSHOT</version>
+  <version>5.6.0.RC2</version>
   <packaging>pom</packaging>
   <name>TERASOLUNA Server Framework for Java (5.x) Build</name>
   <description>TERASOLUNA Server Framework for Java (5.x) Build</description>
