--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.terasoluna.gfw</groupId>
   <artifactId>terasoluna-gfw-parent</artifactId>
-  <version>5.6.0-SNAPSHOT</version>
+  <version>5.6.0.RC2</version>
   <packaging>pom</packaging>
   <name>TERASOLUNA Server Framework for Java (5.x) Parent</name>
   <description>The parent of TERASOLUNA Server Framework for Java (5.x)</description>
@@ -530,7 +530,7 @@
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
     <!-- == Dependency Versions == -->
     <!-- == TERASOLUNA == -->
-    <terasoluna.gfw.version>5.6.0-SNAPSHOT</terasoluna.gfw.version>
+    <terasoluna.gfw.version>5.6.0.RC2</terasoluna.gfw.version>
     <!-- == Spring Boot == -->
     <org.springframework.boot.version>2.2.0.RELEASE</org.springframework.boot.version>
     <!-- == Spring Security OAuth == -->
