--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -468,7 +468,7 @@
       <dependency>
         <groupId>com.sun.activation</groupId>
         <artifactId>javax.activation</artifactId>
-        <version>1.2.0</version>
+        <version>${javax-activation.version}</version>
       </dependency>
       <dependency>
         <groupId>javax.el</groupId>
@@ -558,6 +558,7 @@
     <tiles.version>3.0.8</tiles.version>
     <!-- == Other JavaEE/SE APIs == -->
     <javax-mail.version>1.6.2</javax-mail.version>
+    <javax-activation.version>1.2.0</javax-activation.version>
     <javax-el.version>3.0.1-b06</javax-el.version>
     <javax-inject.version>1</javax-inject.version>
     <javax-jsp.version>2.3.3</javax-jsp.version>
