Revert "from Development/5.6.0 (#957)"
This reverts commit 423c3d5236e8897058d2449421d8f67c68ac12f7.

--- a/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
@@ -37,6 +37,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <!-- Log4JDBC -->
+    <dependency>
+      <groupId>org.lazyluke</groupId>
+      <artifactId>log4jdbc-remix</artifactId>
+    </dependency>
     <!-- == End Logging == -->
 
     <!-- == Begin Spring == -->
