--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -363,6 +363,22 @@
       </dependency>
       <!-- == End Joda-Time == -->
 
+      <!-- == Begin Logging == -->
+      <!-- Log4JDBC -->
+      <dependency>
+        <groupId>org.lazyluke</groupId>
+        <artifactId>log4jdbc-remix</artifactId>
+        <version>${org.lazyluke.version}</version>
+        <!-- this artifact depends on junit as compile scope -->
+        <exclusions>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <!-- == End Logging == -->
+
       <!-- == Begin Google == -->
       <dependency>
         <groupId>com.google.guava</groupId>
@@ -453,31 +469,7 @@
       </dependency>
       <!-- == End Apache Tiles == -->
 
-      <!-- == Begin Bouncy Castle == -->
-      <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
-        <version>${bouncycastle.version}</version>
-      </dependency>
-      <!-- == Begin Bouncy Castle == -->
-
       <!-- == Begin Other JavaEE/SE APIs == -->
-      <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>javax.mail</artifactId>
-        <version>${javax-mail.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.activation</groupId>
-        <artifactId>javax.activation</artifactId>
-        <version>${javax-activation.version}</version>
-      </dependency>
       <dependency>
         <groupId>javax.el</groupId>
         <artifactId>javax.el-api</artifactId>
@@ -510,6 +502,67 @@
       </dependency>
       <!-- == End Other JavaEE/SE APIs == -->
 
+      <!-- == Begin Tomcat == -->
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jsp-api</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-annotations-api</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-catalina-jmx-remote</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-dbcp</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-jdbc</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-websocket</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-el</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-websocket</artifactId>
+        <version>${tomcat.version}</version>
+      </dependency>
+      <!-- == End Tomcat == -->
+
+      <!-- == Begin Unit Test == -->
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest.version}</version>
+      </dependency>
+      <!-- == Begin Unit Test == -->
+
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -532,39 +585,41 @@
     <!-- == TERASOLUNA == -->
     <terasoluna.gfw.version>5.6.0-SNAPSHOT</terasoluna.gfw.version>
     <!-- == Spring Boot == -->
-    <org.springframework.boot.version>2.2.2.RELEASE</org.springframework.boot.version>
+    <org.springframework.boot.version>2.1.2.RELEASE</org.springframework.boot.version>
     <!-- == Spring Security OAuth == -->
-    <spring-security-oauth.version>2.4.0.RELEASE</spring-security-oauth.version>
+    <spring-security-oauth.version>2.2.4.RELEASE</spring-security-oauth.version>
     <!-- == MyBatis3 == -->
-    <org.mybatis.version>3.5.3</org.mybatis.version>
-    <org.mybatis.spring.version>2.0.3</org.mybatis.spring.version>
+    <org.mybatis.version>3.5.0</org.mybatis.version>
+    <org.mybatis.spring.version>2.0.0</org.mybatis.spring.version>
     <!-- == Dozer== -->
-    <dozer.version>6.5.0</dozer.version>
+    <dozer.version>6.4.1</dozer.version>
     <!-- == Joda-Time == -->
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
     <jadira-usertype-core.version>6.0.1.GA</jadira-usertype-core.version>
+    <!-- == Logging == -->
+    <org.lazyluke.version>0.2.7</org.lazyluke.version>
     <!-- == Google == -->
     <guava.version>27.0.1-jre</guava.version>
     <!-- == Apache Commons == -->
-    <commons-beanutils.version>1.9.4</commons-beanutils.version>
+    <commons-beanutils.version>1.9.3</commons-beanutils.version>
     <commons-collections.version>3.2.2</commons-collections.version>
     <commons-fileupload.version>1.3.3</commons-fileupload.version>
     <commons-io.version>2.6</commons-io.version>
     <!-- == OpenPDF == -->
     <openpdf.version>1.0.5</openpdf.version>
     <!-- == Apache POI == -->
-    <poi.version>4.1.1</poi.version>
+    <poi.version>3.17</poi.version>
     <!-- == Apache Tiles == -->
     <tiles.version>3.0.8</tiles.version>
-    <!-- == Bouncy Castle == -->
-    <bouncycastle.version>1.64</bouncycastle.version>
     <!-- == Other JavaEE/SE APIs == -->
-    <javax-mail.version>1.6.2</javax-mail.version>
-    <javax-activation.version>1.2.0</javax-activation.version>
     <javax-el.version>3.0.1-b06</javax-el.version>
     <javax-inject.version>1</javax-inject.version>
     <javax-jsp.version>2.3.3</javax-jsp.version>
     <taglibs-standard.version>1.2.5</taglibs-standard.version>
+    <!-- == Tomcat == -->
+    <tomcat.version>9.0.10</tomcat.version>
+    <!-- == Unit Test == -->
+    <hamcrest.version>1.3</hamcrest.version>
     <!-- == Project Properties == -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <archetype.test.skip>true</archetype.test.skip>
@@ -575,7 +630,7 @@
     <cargo.daemon.url>http://localhost:18000</cargo.daemon.url>
     <cargo.container.id>tomcat9x</cargo.container.id>
     <cargo.container.url>http://archive.apache.org/dist/tomcat/tomcat-9/v${cargo.tomcat9.version}/bin/apache-tomcat-${cargo.tomcat9.version}.zip</cargo.container.url>
-    <cargo.tomcat9.version>9.0.29</cargo.tomcat9.version>
+    <cargo.tomcat9.version>${tomcat.version}</cargo.tomcat9.version>
   </properties>
   <profiles>
     <profile>
