--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>terasoluna-gfw-common-libraries</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.6.0-SNAPSHOT</version>
+    <version>5.6.0.M3</version>
     <relativePath>../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-validator</artifactId>
