--- a/terasoluna-gfw-dependencies/terasoluna-gfw-mybatis3-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-mybatis3-dependencies/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>terasoluna-gfw-dependencies</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.6.0-SNAPSHOT</version>
+    <version>5.6.0.M3</version>
     <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-mybatis3-dependencies</artifactId>
