add version management of hibernate-entitymanager #1023

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -350,6 +350,11 @@
         <artifactId>hibernate-core</artifactId>
         <version>${org.hibernate.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>${org.hibernate.version}</version>
+      </dependency>
       <!-- == End Hibernate == -->
 
       <!-- == Begin Dozer== -->
