added a comment about the reason for defining your own version #1023
(cherry picked from commit 363844dc9521c9074039183f1d3f9dc9eeb53995)

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -536,6 +536,7 @@
     <org.mybatis.version>3.5.3</org.mybatis.version>
     <org.mybatis.spring.version>2.0.3</org.mybatis.spring.version>
     <!-- == Hibernate == -->
+    <!--The version was changed independently as a countermeasure against vulnerabilities of CVE-2020-25638.-->
     <org.hibernate.version>5.4.24.Final</org.hibernate.version>
     <!-- == Dozer== -->
     <dozer.version>6.5.0</dozer.version>
