Improved comments on Hibernate updates #1028

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -605,7 +605,7 @@
     <org.mybatis.version>3.5.0</org.mybatis.version>
     <org.mybatis.spring.version>2.0.0</org.mybatis.spring.version>
     <!-- == Hibernate == -->
-    <!--The version was changed independently as a countermeasure against vulnerabilities of CVE-2020-25638.-->
+    <!--Changed from Spring Boot as a countermeasure against CVE-2020-25638.-->
     <org.hibernate.version>5.3.20.Final</org.hibernate.version>
     <!-- == Dozer== -->
     <dozer.version>6.4.1</dozer.version>
