depend jakarta lib. #1038

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
@@ -62,8 +62,8 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- == Begin Unit Test == -->
