--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
@@ -63,8 +63,8 @@
   <dependencies>
     <!-- == Begin BeanValidation == -->
     <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
