--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-web-jsp/pom.xml
@@ -94,13 +94,13 @@
     <!-- == Begin Tomcat == -->
     <!-- Servlet API 3.0 & JSP API 2.2 -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>javax.servlet.jsp-api</artifactId>
+      <groupId>jakarta.servlet.jsp</groupId>
+      <artifactId>jakarta.servlet.jsp-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- == End Tomcat == -->
@@ -113,8 +113,8 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
+      <groupId>jakarta.el</groupId>
+      <artifactId>jakarta.el-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- == End Other JavaEE/SE APIs == -->
