--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
@@ -121,7 +121,7 @@
     </dependency>
     <!-- == End Spring == -->
 
-    <!-- == Begin Other JavaEE/SE APIs == -->
+    <!-- == Begin Other JakartaEE/SE APIs == -->
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-el</artifactId>
@@ -131,7 +131,7 @@
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
     </dependency>
-    <!-- == End Other JavaEE/SE APIs == -->
+    <!-- == End Other JakartaEE/SE APIs == -->
 
     <!-- == Begin Database == -->
     <!-- H2 (for test) -->
