--- a/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
@@ -54,11 +54,11 @@
       <artifactId>spring-context</artifactId>
     </dependency>
     <!-- == End Spring == -->
-    <!-- == Begin Other JavaEE/SE APIs == -->
+    <!-- == Begin Other JakartaEE/SE APIs == -->
     <dependency>
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
     </dependency>
-    <!-- == End Other JavaEE/SE APIs == -->
+    <!-- == End Other JakartaEE/SE APIs == -->
   </dependencies>
 </project>
