--- a/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
@@ -62,11 +62,11 @@
     </dependency>
     <!-- == End BeanValidation == -->
 
-    <!-- == Begin Other JakartaEE/SE APIs == -->
+    <!-- == Begin Other == -->
     <dependency>
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
     </dependency>
-    <!-- == End Other JakartaEE/SE APIs == -->
+    <!-- == End Other == -->
   </dependencies>
 </project>
