--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -486,7 +486,7 @@
       </dependency>
       <!-- == Begin Bouncy Castle == -->
 
-      <!-- == Begin Other JakartaEE/SE APIs == -->
+      <!-- == Begin Other == -->
       <dependency>
         <groupId>jakarta.el</groupId>
         <artifactId>jakarta.el-api</artifactId>
@@ -517,7 +517,7 @@
         <artifactId>taglibs-standard-spec</artifactId>
         <version>${taglibs-standard.version}</version>
       </dependency>
-      <!-- == End Other JakartaEE/SE APIs == -->
+      <!-- == End Other == -->
 
     </dependencies>
   </dependencyManagement>
@@ -571,7 +571,7 @@
     <tiles.version>3.0.8</tiles.version>
     <!-- == Bouncy Castle == -->
     <bouncycastle.version>1.64</bouncycastle.version>
-    <!-- == Other JakartaEE/SE APIs == -->
+    <!-- == Other == -->
     <jakarta-el.version>3.0.3</jakarta-el.version>
     <jakarta-inject.version>1.0.3</jakarta-inject.version>
     <jakarta-jsp.version>2.3.6</jakarta-jsp.version>
