--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/pom.xml
@@ -108,8 +108,14 @@
 
     <!-- == Begin BeanValidation == -->
     <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
+      <scope>test</scope>
     </dependency>
     <!-- == End BeanValidation == -->
 
@@ -121,17 +127,17 @@
     </dependency>
     <!-- == End Spring == -->
 
-    <!-- == Begin Other JavaEE/SE APIs == -->
+    <!-- == Begin Other == -->
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-el</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
     </dependency>
-    <!-- == End Other JavaEE/SE APIs == -->
+    <!-- == End Other == -->
 
     <!-- == Begin Database == -->
     <!-- H2 (for test) -->
