--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-web/pom.xml
@@ -84,10 +84,10 @@
     <!-- == End Spring == -->
 
     <!-- == Begin Tomcat == -->
-    <!-- Servlet API 3.0 -->
+    <!-- Servlet API 4.0 -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- == End Tomcat == -->
