migrated from Dozer to MapStruct #1183

--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -43,16 +43,12 @@
     </dependency>
     <!-- == End Apache Commons == -->
 
-    <!-- == Begin Dozer== -->
+    <!-- == Begin MapStruct== -->
     <dependency>
-      <groupId>com.github.dozermapper</groupId>
-      <artifactId>dozer-core</artifactId>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.github.dozermapper</groupId>
-      <artifactId>dozer-spring4</artifactId>
-    </dependency>
-    <!-- == End Dozer== -->
+    <!-- == End MapStruct== -->
 
     <!-- == Begin Joda-Time == -->
     <dependency>
