--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -100,6 +100,13 @@
             <archive>
               <addMavenDescriptor>false</addMavenDescriptor>
             </archive>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>org.mapstruct</groupId>
+                  <artifactId>mapstruct-processor</artifactId>
+                  <version>${mapstruct.version}</version>
+                </path>
+              </annotationProcessorPaths>
           </configuration>
         </plugin>
         <plugin>
@@ -346,18 +353,13 @@
       </dependency>
       <!-- == End MyBatis == -->
 
-      <!-- == Begin Dozer== -->
+      <!-- == Begin MapStruct== -->
       <dependency>
-        <groupId>com.github.dozermapper</groupId>
-        <artifactId>dozer-core</artifactId>
-        <version>${dozer.version}</version>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct</artifactId>
+        <version>${mapstruct.version}</version>
       </dependency>
-      <dependency>
-        <groupId>com.github.dozermapper</groupId>
-        <artifactId>dozer-spring4</artifactId>
-        <version>${dozer.version}</version>
-      </dependency>
-      <!-- == End Dozer== -->
+      <!-- == End MapStruct== -->
 
       <!-- == Begin Joda-Time == -->
       <dependency>
@@ -543,8 +545,8 @@
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.5.7</org.mybatis.version>
     <org.mybatis.spring.version>2.0.6</org.mybatis.spring.version>
-    <!-- == Dozer== -->
-    <dozer.version>6.5.2</dozer.version>
+    <!-- == MapStrcut== -->
+    <mapstruct.version>1.5.2.Final</mapstruct.version>
     <!-- == Joda-Time == -->
     <joda-time.joda-time.version>2.10.9</joda-time.joda-time.version>
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
